PROYECTO2/code/services/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: grafana
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: grafana
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.33.0 (3ce457399)
      labels:
        io.kompose.network/code-default: "true"
        io.kompose.service: grafana
    spec:
      containers:
        - env:
            - name: GF_INSTALL_PLUGINS
              value: redis-datasource
          image: grafana/grafana:latest
          name: grafana
          ports:
            - containerPort: 3000
              hostPort: 3002
              protocol: TCP
      restartPolicy: Always
