PROYECTO2/code/services/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: grafana
  name: grafana
spec:
  ports:
    - name: "3002"
      port: 3002
      targetPort: 3000
  selector:
    io.kompose.service: grafana
